Update button link to new DigitalOcean app

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@ We reproduce and validate scientific articles through clean, transparent code.
 
 This verified code is stored in a curated RAG knowledge base.
 
-Our AI agents use this foundation to give probabilistic, genetical, and statistical guidance.
+our product is a generative statistical mechanics system (StatMech Agent).   
+
+Our StatMech Agent use this foundation to give probabilistic, genetical, and statistical guidance.
         
 
 <strong>Value Proposition:</strong>
-The AI Ensamble agent helps you:
+The StatMech Agent helps you:
 – build better experiments
 – explore hypotheses
 – optimize decisions with probability-based thinking
@@ -56,10 +58,10 @@ The AI Ensamble agent helps you:
 <section>
     <h3>Access the Private Agent</h3>
 
-    <p>The AI Ensamble agent can be accessed here  (private access only):</p>
+    <p>The StatMech Agent can be accessed here  (private access only):</p>
 
     <a class="button" href="https://statsapp-47vj4.ondigitalocean.app/" target="_blank">
-        Open the AI Ensamble agent
+        Open the StatMech Agent
     </a>
 
     <p>
