Update button link to new DigitalOcean app

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <h1>AI Ensemble</h1>
-    <h2>AI-Driven Experiment Design From Clean-State Interaction</h2>
+    <h2>Reproducible science, amplified by AI</h2>
 
 <nav>
     <a href="certified-prompts.html">Key article selection</a>
