Update main page: role-playing learning game with online and local versions

--- a/index.html
+++ b/index.html
@@ -1,90 +1,220 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Ensemble — Experiment Design Intelligence</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="utf-8" />
+  <title>AI-Ensemble</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="AI-Ensemble is a role-playing learning game for expert reasoning, available online and as a local CPU-only system." />
+
+  <style>
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      color: #111;
+      background: #fff;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 48px 20px;
+    }
+
+    h1 {
+      font-size: 2.2rem;
+      margin-bottom: 1rem;
+    }
+
+    h2 {
+      margin-top: 3rem;
+      font-size: 1.5rem;
+    }
+
+    h3 {
+      margin-top: 2rem;
+      font-size: 1.2rem;
+    }
+
+    p {
+      margin: 1rem 0;
+    }
+
+    ul {
+      margin: 1rem 0 1rem 1.5rem;
+    }
+
+    hr {
+      margin: 3rem 0;
+      border: none;
+      border-top: 1px solid #ddd;
+    }
+
+    .cta {
+      margin-top: 3rem;
+      padding: 1.5rem;
+      border: 1px solid #ddd;
+      background: #fafafa;
+    }
+
+    .cta a {
+      display: inline-block;
+      margin-top: 0.5rem;
+      font-weight: 600;
+      text-decoration: none;
+      color: #0b5bd3;
+    }
+
+    .muted {
+      color: #444;
+      font-size: 0.95rem;
+    }
+  </style>
 </head>
 
 <body>
-<header>
-    <h1>AI Ensemble</h1>
-    <h2>Reproducible science, amplified by AI</h2>
+  <main>
 
-<nav>
-    <a href="certified-prompts.html">Key article selection</a>
-    <a href="about.html">About the Author</a>
-</nav>
-</header>
-
-<main>
-
-<section>
-    <h3>The Project</h3>
+    <h1>AI-Ensemble</h1>
 
     <p>
-        <strong>AI Ensemble</strong> brings statistical rigor to AI.
-
-We reproduce and validate scientific articles through clean, transparent code.
-
-This verified code is stored in a curated RAG knowledge base.
-
-our product is a generative statistical mechanics system (StatMech Agent).   
-
-Our StatMech Agent use this foundation to give probabilistic, genetical, and statistical guidance.
-        
- <p>
-<strong>Value Proposition:</strong>
-The StatMech Agent helps you:
-– build better experiments
-– explore hypotheses
-– optimize decisions with probability-based thinking
-  </p>
+      <strong>AI-Ensemble is a role-playing learning game for expert reasoning.</strong>
+      It is available as an online service and as a fully local system built on the same core logic.
     </p>
-
-   
-    
-  
 
     <p>
-        Design smarter. Simulate outcomes. Leave with ready-to-run code.
-
+      Users do not interact with AI-Ensemble as a generic chatbot.
+      Instead, they enter a <strong>designed role-playing environment</strong> in which learning
+      happens through reasoning, decision-making, and confrontation with curated knowledge.
     </p>
-</section>
 
-<section>
-    <h3>Access the Private Agent</h3>
+    <hr>
 
-    <p>The StatMech Agent can be accessed here  (private access only):</p>
-
-    <a class="button" href="https://statsapp-47vj4.ondigitalocean.app/" target="_blank">
-        Open the StatMech Agent
-    </a>
+    <h2>The role-playing learning game</h2>
 
     <p>
-        To request access, copy & paste this email:<br>
-        <strong>joseguerraenza@gmail.com</strong>
+      At the core of AI-Ensemble is a role-playing learning game.
+      Users take on professional roles such as:
     </p>
-</section>
 
-<section>
-    <h3>How the System Learns</h3>
+    <ul>
+      <li>coder</li>
+      <li>statistician</li>
+      <li>breeder</li>
+      <li>director or decision-maker</li>
+    </ul>
 
     <p>
-        Results from Key scientific articles are reproduced by AI and validaded by experts
+      Each role frames how problems are presented and which trade-offs matter.
+      The same underlying knowledge may lead to different conclusions depending
+      on the role being played.
     </p>
 
-    <blockquote>
-        Can an AI deliver reliable time saving advise ?
-    </blockquote>
-</section>
+    <p>
+      Learning is driven by <strong>engineered progression</strong>:
+      knowledge is introduced deliberately, users must justify claims using
+      available material, and progress can be blocked when understanding
+      is insufficient.
+    </p>
 
-</main>
+    <p>
+      Speed and fluency do not matter.
+      What matters is reasoning, consistency, and evidence.
+    </p>
 
-<footer>
-    <p>© AI Ensemble — An statistical start up</p>
-</footer>
+    <hr>
 
+    <h2>One system, two ways to run it</h2>
+
+    <p>
+      AI-Ensemble is offered in two distributions of the same system:
+      an online version and a local version.
+      Both share the same learning logic, grounding rules, and role-playing mechanics.
+    </p>
+
+    <h3>Online version</h3>
+
+    <p>
+      The online version provides the full role-playing learning game
+      as a hosted service.
+      It is intended for users who want immediate access and a managed environment
+      without local setup.
+    </p>
+
+    <h3>Local version (CPU-only, low-carbon)</h3>
+
+    <p>
+      The local version is a direct spin-off of the online system.
+      It runs entirely on the user’s own machine using
+      <strong>quantized, CPU-only models</strong>.
+    </p>
+
+    <ul>
+      <li>No GPU required</li>
+      <li>No dependence on large cloud providers</li>
+      <li>User-configurable knowledge and settings</li>
+      <li>Offline-capable</li>
+    </ul>
+
+    <p>
+      The user can purchase either the online or the local version,
+      depending on their needs.
+      The learning game remains the same; only the deployment differs.
+    </p>
+
+    <hr>
+
+    <h2>Reliability through controlled inputs</h2>
+
+    <p>
+      Across both online and local versions, AI-Ensemble follows a strict rule:
+    </p>
+
+    <p>
+      <strong>The system reasons only over explicitly provided and curated knowledge.</strong>
+    </p>
+
+    <p>
+      If information is not present, the system does not invent it.
+      “I don’t know” is a valid and intentional outcome.
+      Reliability comes from input control and explicit evidence,
+      not from model scale.
+    </p>
+
+    <hr>
+
+    <h2>Responsible AI by design</h2>
+
+    <p>
+      By offering a local, CPU-only version built on quantized models,
+      AI-Ensemble reduces environmental impact and avoids dependence
+      on GPU-heavy infrastructure and mega cloud providers.
+    </p>
+
+    <p>
+      This design supports privacy, sustainability, and long-term
+      educational and professional use.
+    </p>
+
+    <div class="cta">
+      <p><strong>Enter the online learning game</strong></p>
+      <p class="muted">
+        Access the hosted role-playing learning environment.
+      </p>
+      <a href="https://statsapp-47vj4.ondigitalocean.app/">
+        Enter AI-Ensemble
+      </a>
+    </div>
+
+    <hr>
+
+    <p class="muted">
+      AI-Ensemble is a learning and decision-support system.
+      It does not replace expert judgment and should not be used
+      outside the scope of its explicitly provided knowledge.
+    </p>
+
+  </main>
 </body>
 </html>
