Add examples page and link from main page

--- a/index.html
+++ b/index.html
@@ -208,6 +208,18 @@
     </div>
 
     <hr>
+<hr>
+
+<h2>Examples</h2>
+
+<p>
+Concrete examples show how AI-Ensemble is used in practice
+across different roles and decision contexts.
+</p>
+
+<p>
+<a href="examples.html">View example scenarios →</a>
+</p>
 
     <p class="muted">
       AI-Ensemble is a learning and decision-support system.
