Add scientist examples for experimental design and analysis

--- a/examples.html
+++ b/examples.html
@@ -102,6 +102,49 @@
         before committing to changes in breeding strategy or infrastructure.
       </p>
     </details>
+<details>
+  <summary>Scientist — designing and collecting experimental data</summary>
+
+  <p>
+    The user acts as a scientist responsible for designing an experiment
+    and planning how data will be collected.
+  </p>
+
+  <p>
+    AI-Ensemble is used to reason through experimental objectives,
+    design choices, sources of variation, sample size considerations,
+    and practical constraints before any data is collected.
+  </p>
+
+  <p>
+    By engaging with curated methodological knowledge and expert inputs,
+    the learning game exposes how early design decisions affect
+    data quality, interpretability, and downstream analysis.
+  </p>
+</details>
+
+<details>
+  <summary>Scientist — analyzing and interpreting experimental results</summary>
+
+  <p>
+    The user acts as a scientist analyzing data from an experiment
+    after it has been conducted.
+  </p>
+
+  <p>
+    AI-Ensemble is used to reason through data structure,
+    model assumptions, sources of uncertainty,
+    and alternative analytical approaches using only
+    explicitly provided inputs.
+  </p>
+
+  <p>
+    Through the role-playing learning game, the user explores
+    how different analytical choices influence conclusions,
+    limitations, and the strength of evidence.
+  </p>
+</details>
+
 
     <p class="muted">
       Additional examples will be added over time.
