--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <p class="muted">
         Access the hosted role-playing learning environment.
       </p>
-      <a href="https://ai-ensemble-web.ondigitalocean.app/">
+      <a href="https://statsapp-47vj4.ondigitalocean.app/">
         Enter AI-Ensemble
       </a>
     </div>
