--- a/index.html
+++ b/index.html
@@ -3,58 +3,61 @@
 <head>
   <meta charset="UTF-8" />
   <title>AI-Ensemble</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
     body {
       margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background: #f5f7fa;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      background: #f4f6f8;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
 
     header {
-      padding: 1rem 2rem;
       background: #111827;
       color: #ffffff;
-      font-size: 1.1rem;
+      padding: 12px 20px;
       font-weight: 600;
+      font-size: 1rem;
     }
 
-    .container {
+    .layout {
+      flex: 1;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
-      gap: 1rem;
-      padding: 1rem;
-      height: calc(100vh - 56px);
+      gap: 12px;
+      padding: 12px;
       box-sizing: border-box;
     }
 
     .panel {
       background: #ffffff;
-      border-radius: 8px;
+      border: 1px solid #d1d5db;
+      border-radius: 6px;
       display: flex;
       flex-direction: column;
-      border: 1px solid #e5e7eb;
     }
 
     .panel h2 {
       margin: 0;
-      padding: 0.75rem 1rem;
-      border-bottom: 1px solid #e5e7eb;
-      font-size: 0.95rem;
+      padding: 10px 12px;
+      font-size: 0.9rem;
       background: #f9fafb;
+      border-bottom: 1px solid #e5e7eb;
     }
 
     .messages {
       flex: 1;
-      padding: 1rem;
+      padding: 10px;
       overflow-y: auto;
-      font-size: 0.9rem;
+      font-size: 0.85rem;
       white-space: pre-wrap;
     }
 
     .message {
-      margin-bottom: 0.75rem;
+      margin-bottom: 8px;
     }
 
     .message.user {
@@ -69,16 +72,16 @@
     .input input {
       flex: 1;
       border: none;
-      padding: 0.75rem;
-      font-size: 0.9rem;
+      padding: 10px;
+      font-size: 0.85rem;
       outline: none;
     }
 
     .input button {
       border: none;
-      padding: 0.75rem 1rem;
+      padding: 10px 14px;
       background: #2563eb;
-      color: #ffffff;
+      color: white;
       cursor: pointer;
     }
 
@@ -91,13 +94,13 @@
 <body>
 
 <header>
-  AI-Ensemble · Scenario · Expert · Manager
+  AI-Ensemble · Role-Playing Learning Interface
 </header>
 
-<div class="container">
+<div class="layout">
 
   <div class="panel">
-    <h2>Scenario</h2>
+    <h2>Main Scenario</h2>
     <div class="messages" id="scenarioMessages"></div>
     <div class="input">
       <input id="scenarioInput" placeholder="Describe the situation or decision..." />
@@ -109,7 +112,7 @@
     <h2>Expert</h2>
     <div class="messages" id="expertMessages"></div>
     <div class="input">
-      <input id="expertInput" placeholder="Ask for technical or scientific advice..." />
+      <input id="expertInput" placeholder="Ask for technical or scientific support..." />
       <button onclick="sendMessage('expert')">Send</button>
     </div>
   </div>
@@ -118,7 +121,7 @@
     <h2>Manager</h2>
     <div class="messages" id="managerMessages"></div>
     <div class="input">
-      <input id="managerInput" placeholder="Ask for strategy or process advice..." />
+      <input id="managerInput" placeholder="Ask for strategic or process guidance..." />
       <button onclick="sendMessage('manager')">Send</button>
     </div>
   </div>
@@ -128,8 +131,8 @@
 <script>
   const API_URL = "https://statsapp-47vj4.ondigitalocean.app/api/chat";
 
-  function addMessage(panel, text, cls) {
-    const box = document.getElementById(panel + "Messages");
+  function addMessage(role, text, cls) {
+    const box = document.getElementById(role + "Messages");
     const div = document.createElement("div");
     div.className = "message " + cls;
     div.textContent = text;
@@ -166,3 +169,4 @@
 
 </body>
 </html>
+
