Clarify Scenario role: prompt specification

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <div class="layout">
 
   <div class="panel">
-    <h2>Main Scenario</h2>
+    <h2>Scenario — prompt specification</h2>
     <div class="messages" id="scenarioMessages"></div>
     <div class="input">
       <input id="scenarioInput" placeholder="Describe the situation or decision..." />
