--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   </div>
 
   <div class="panel">
-    <h2>Expert</h2>
+    <h2>Ensemble — alternative reasoning</h2>
     <div class="messages" id="expertMessages"></div>
     <div class="input">
       <input id="expertInput" placeholder="Ask for technical or scientific support..." />
