Rename Manager to Compiler and clarify synthesis role

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   </div>
 
   <div class="panel">
-    <h2>Manager</h2>
+    <h2>Compiler — grounded synthesis</h2>
     <div class="messages" id="managerMessages"></div>
     <div class="input">
       <input id="managerInput" placeholder="Ask for strategic or process guidance..." />
