Clarify Scenario purpose: prompt specification

--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
 
   <div class="panel">
     <h2>Scenario — prompt specification</h2>
+    <p>
+     This interface helps to specify the problem and the prompt to be used in the next interface
+    </p>
     <div class="messages" id="scenarioMessages"></div>
     <div class="input">
       <input id="scenarioInput" placeholder="Describe the situation or decision..." />
