Clarify Ensemble role: alternative reasoning paths

--- a/index.html
+++ b/index.html
@@ -172,6 +172,12 @@
 
   <div class="panel">
     <h2>Ensemble — alternative reasoning</h2>
+    <p>
+    This interface generates multiple answers based alternative reasoning paths.
+    Its purpose is to expose uncertainty, competing assumptions, and
+    different interpretations before any synthesis or decision is made.
+    </p>
+
     <div class="messages" id="expertMessages"></div>
     <div class="input">
       <input id="expertInput" placeholder="Ask for technical or scientific support..." />
