Clarify Compiler role: grounded synthesis and decision

--- a/index.html
+++ b/index.html
@@ -187,6 +187,12 @@
 
   <div class="panel">
     <h2>Compiler — grounded synthesis</h2>
+     <p>
+     This interface synthesizes the alternative reasoning paths produced
+     by the Ensemble. It applies curated knowledge, to produce a final, 
+     result.
+     </p>
+
     <div class="messages" id="managerMessages"></div>
     <div class="input">
       <input id="managerInput" placeholder="Ask for strategic or process guidance..." />
