Add Online vs Local deployment explanation

--- a/index.html
+++ b/index.html
@@ -204,19 +204,19 @@
 <h2>The system is designed as a left-to-right working pipeline.</h2>
 
 <p>
-Left panel — Input
-Starts by typing the initial prompt in the leftmost panel.
+Left panel — 
+Type the initial prompt in the leftmost panel.
 This defines the problem, question, or scenario and sets the context for everything that follows.
 </p>
 
 <p>
-Middle panel — Processing / Refinement
+Middle panel — Processing / Refinement.
 The content from the left panel is copied into the middle panel.
 </p>
 
 <p>
-Right panel — Final Output
-Output from the middle panel is copied into the rightmost panel.
+Right panel — Final
+output from the middle panel is copied into the rightmost panel.
 This step produces the final results or answers.
 </p>
 <script>
